--- a/src/com/ust/form/GUI.form
+++ b/src/com/ust/form/GUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="808" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -21,7 +21,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <icon value="Header2.jpg"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -29,22 +30,23 @@
       <scrollpane id="c9963">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="300" height="480"/>
+            <preferred-size width="500" height="300"/>
           </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="27353" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+          <component id="27353" class="javax.swing.JTextArea" binding="logsTextArea">
             <constraints/>
             <properties>
+              <background color="-1182285"/>
               <editable value="false"/>
               <text value=""/>
             </properties>
           </component>
         </children>
       </scrollpane>
-      <grid id="ea5c" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ea5c" layout-manager="GridLayoutManager" row-count="3" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -52,21 +54,26 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ccf94" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="ccf94" class="javax.swing.JTextField" binding="sourcePathTextField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <text value=""/>
+            </properties>
           </component>
-          <component id="fae25" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="fae25" class="javax.swing.JTextField" binding="outputPathTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
           <component id="16650" class="javax.swing.JLabel">
             <constraints>
@@ -94,34 +101,34 @@
           </component>
           <component id="8bbbe" class="javax.swing.JCheckBox" binding="testCheckBox" default-binding="true">
             <constraints>
-              <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Test"/>
             </properties>
           </component>
+          <component id="868d5" class="javax.swing.JButton" binding="outputBrowseButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="BROWSE"/>
+            </properties>
+          </component>
+          <component id="b0cb" class="javax.swing.JButton" binding="sourceBrowseButton">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="BROWSE"/>
+            </properties>
+          </component>
           <component id="86a69" class="javax.swing.JCheckBox" binding="trainCheckBox" default-binding="true">
             <constraints>
-              <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Train"/>
-            </properties>
-          </component>
-          <component id="868d5" class="javax.swing.JButton" binding="BROWSEButton1" default-binding="true">
-            <constraints>
-              <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="BROWSE"/>
-            </properties>
-          </component>
-          <component id="b0cb" class="javax.swing.JButton" binding="BROWSEButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="BROWSE"/>
             </properties>
           </component>
         </children>
