--- a/src/com/ust/form/GUI.form
+++ b/src/com/ust/form/GUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="808" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-15657962"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="87ba8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -39,7 +41,7 @@
           <component id="27353" class="javax.swing.JTextArea" binding="logsTextArea">
             <constraints/>
             <properties>
-              <background color="-1182285"/>
+              <background color="-264749"/>
               <editable value="false"/>
               <text value=""/>
             </properties>
@@ -51,7 +53,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-19200"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="ccf94" class="javax.swing.JTextField" binding="sourcePathTextField">
@@ -61,6 +65,7 @@
               </grid>
             </constraints>
             <properties>
+              <background color="-264749"/>
               <editable value="false"/>
               <text value=""/>
             </properties>
@@ -72,6 +77,7 @@
               </grid>
             </constraints>
             <properties>
+              <background color="-264749"/>
               <editable value="false"/>
             </properties>
           </component>
@@ -96,6 +102,8 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13683913"/>
+              <foreground color="-2039584"/>
               <text value="RESET"/>
             </properties>
           </component>
@@ -104,6 +112,8 @@
               <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-19200"/>
+              <foreground color="-15855598"/>
               <text value="Test"/>
             </properties>
           </component>
@@ -112,6 +122,8 @@
               <grid row="1" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13683913"/>
+              <foreground color="-2039584"/>
               <text value="BROWSE"/>
             </properties>
           </component>
@@ -120,6 +132,8 @@
               <grid row="0" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13683913"/>
+              <foreground color="-2039584"/>
               <text value="BROWSE"/>
             </properties>
           </component>
@@ -128,24 +142,29 @@
               <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-19200"/>
+              <foreground color="-15855598"/>
               <text value="Train"/>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="37271" class="javax.swing.JLabel">
+      <component id="37271" class="javax.swing.JLabel" binding="authorsLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="BOLO, BRIONES, INFANTADO, TAN"/>
         </properties>
       </component>
-      <component id="43a78" class="javax.swing.JButton" binding="STARTButton" default-binding="true">
+      <component id="43a78" class="javax.swing.JButton" binding="startButton">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-4603453"/>
+          <foreground color="-15855598"/>
           <text value="START"/>
         </properties>
       </component>
